# rss-reader

./: Cargo.toml  README.md
docs/plans/: 2026-03-22-terminal-multi-feed-design.md
src/: config.rs  fetcher.rs  main.rs  models.rs  store.rs  tui.rs
tests/: config_store.rs
