[package]
name = "rss-reader"
version = "0.1.4"
edition = "2024"
autobins = false

[[bin]]
name = "rss"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dirs-next = "2.0.0"
feedparser-rs = "0.4.6"
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.13.2", features = ["gzip", "brotli", "deflate", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
url = "2.5.8"
crossterm = "0.28.1"
